--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -30,12 +30,13 @@
                 android:baselineAligned="false">
 
                 <ImageView
-                    android:src="@drawable/images"
+
                     android:id="@+id/img00"
                     android:layout_width="50dp"
                     android:layout_height="100dp"
                     android:layout_weight="1"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    android:scaleType="centerCrop" />
                 <ImageView
                     android:src="@drawable/images"
                     android:id="@+id/img01"
@@ -56,7 +57,8 @@
                     android:layout_gravity="center"
                     android:layout_width="50dp"
                     android:layout_height="100dp"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop" />
             </TableRow>
 
             <TableRow
