--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,9 +69,10 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="00:00:00"
         android:id="@+id/best2View"
-        android:layout_alignTop="@+id/best2Title"
-        android:layout_alignLeft="@+id/best3View"
-        android:layout_alignStart="@+id/best3View" />
+        android:layout_marginTop="40dp"
+        android:layout_below="@+id/best1View"
+        android:layout_alignLeft="@+id/best1View"
+        android:layout_alignStart="@+id/best1View" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -79,10 +80,10 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Best #2"
         android:id="@+id/best2Title"
-        android:layout_below="@+id/best1Title"
-        android:layout_alignLeft="@+id/best1Title"
-        android:layout_alignStart="@+id/best1Title"
-        android:layout_marginTop="54dp" />
+        android:layout_above="@+id/best3View"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="33dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -101,7 +102,17 @@
         android:text="Best #3"
         android:id="@+id/best3Title"
         android:layout_alignTop="@+id/best3View"
-        android:layout_alignLeft="@+id/best2Title"
-        android:layout_alignStart="@+id/best2Title" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="button1"
+        android:id="@+id/button1"
+        android:layout_below="@+id/startBTN"
+        android:layout_toStartOf="@+id/best1View"
+        android:layout_alignEnd="@+id/best1Title" />
 
 </RelativeLayout>
