--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,10 @@
         android:text="Reset Scores"
         android:id="@+id/resetBTN"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignRight="@+id/selectBTN"
+        android:layout_alignEnd="@+id/selectBTN"
+        android:layout_alignLeft="@+id/selectBTN"
+        android:layout_alignStart="@+id/selectBTN" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -104,15 +107,5 @@
         android:layout_alignTop="@+id/best3View"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="button1"
-        android:id="@+id/button1"
-        android:layout_below="@+id/startBTN"
-        android:layout_toStartOf="@+id/best1View"
-        android:layout_alignEnd="@+id/best1Title" />
 
 </RelativeLayout>
