--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,10 +52,10 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Best #1"
         android:id="@+id/best1Title"
+        android:layout_marginTop="42dp"
         android:layout_below="@+id/resetBTN"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="42dp" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -83,10 +83,9 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Best #2"
         android:id="@+id/best2Title"
-        android:layout_above="@+id/best3View"
+        android:layout_alignTop="@+id/best2View"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="33dp" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
