--- a/app/src/main/res/layout/activity_selecting_images.xml
+++ b/app/src/main/res/layout/activity_selecting_images.xml
@@ -13,7 +13,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.assafbt.projects.memorygame.SelectingImages">
+    android:background="@color/Bright_Lavender"
+    tools:context="com.assafbt.projects.memorygame.SelectingImages"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
@@ -102,5 +104,14 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+   <!--
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/BackBTN"
+        android:text="BACK"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+-->
 
 </RelativeLayout>
