--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start new game"
+        android:text="@string/play_game"
         android:id="@+id/startBTN"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -29,7 +29,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select pictures"
+        android:text="@string/select_imgs"
         android:id="@+id/selectBTN"
         android:layout_below="@+id/startBTN"
         android:layout_centerHorizontal="true"
@@ -40,7 +40,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Reset Scores"
+        android:text="@string/reset_score"
         android:id="@+id/resetBTN"
         android:layout_centerVertical="true"
         android:layout_below="@+id/resetIMG"
@@ -52,7 +52,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Reset images"
+        android:text="@string/reset_imgs"
         android:id="@+id/resetIMG"
         android:layout_below="@+id/selectBTN"
         android:layout_centerVertical="true"
@@ -66,7 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Best #1"
+        android:text="@string/score1"
         android:id="@+id/best1Title"
         android:layout_marginTop="42dp"
         android:layout_below="@+id/resetBTN"
@@ -97,7 +97,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Best #2"
+        android:text="@string/score2"
         android:id="@+id/best2Title"
         android:layout_alignTop="@+id/best2View"
         android:layout_alignParentLeft="true"
@@ -119,7 +119,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Best #3"
+        android:text="@string/score3"
         android:id="@+id/best3Title"
         android:layout_alignTop="@+id/best3View"
         android:layout_alignParentLeft="true"
