--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,8 @@
         android:id="@+id/startBTN"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp" />
+        android:layout_marginTop="50dp"
+        android:background="@drawable/play_btn"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -35,7 +36,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:layout_alignParentStart="false"
-        android:layout_alignParentLeft="false" />
+        android:layout_alignParentLeft="false"/>
 
     <Button
         android:layout_width="wrap_content"
