--- a/app/src/main/res/values-iw/string.xml
+++ b/app/src/main/res/values-iw/string.xml
@@ -17,6 +17,8 @@
         <string name="score1">תוצאה #1</string>
         <string name="score2">תוצאה #2</string>
         <string name="score3">תוצאה #3</string>
+    <string name="main_title1">ברוכים הבאים למשחק הזיכרון של </string>
+    <string name="main_title2">עמותת "אח בוגר אחות בוגרת"</string>
 
 
 
